[package]
name = "esp-idf-isr"
version = "0.1.0"
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
incremental = true

[features]
native = ["esp-idf-sys/native"]

[dependencies]
embedded-hal = { version = "1.0.0-alpha.9" }
esp-idf-hal = { git = "https://github.com/pilotniq/esp-idf-hal", branch = "piloting-esp-idf-sys" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys", branch = "master", features = [
    "binstart",
] }

[build-dependencies]
embuild = "0.31"
anyhow = "1"

[[example]]
name = "with_eventloop"
path = "examples/with_eventloop.rs"

[dev-dependencies]
log = { version = "0.4" }
esp-idf-svc = { git = "https://github.com/pilotniq/esp-idf-svc", branch = "pilotniq-branches-a2dp", features = [
    "nightly",
    "experimental",
] }
embedded-svc = { version = "0.24", features = ["nightly", "experimental"] }

